# server-memory

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROJECT_INDEX.md  README.md  RELEASING.md  SECURITY.md  benchmark.py  commit_message.txt  pyproject.toml  serve.py  stdio_proxy.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/instructions/: server-memory-evidence-bound-maintenance.instructions.md
.github/workflows/: ci.yml  codeql.yml
benchmark/: __init__.py  retrieval_scale.py  run_benchmark.py  suite.py  tasks.yaml
docs/: BENCHMARK_PROTOCOL.md
docs/benchmarks/: retrieval-scale-2026-07-19.md
docs/superpowers/plans/: 2026-03-26-server-memory-retrieval-and-tooling-plan.md
docs/superpowers/specs/: 2026-03-26-server-memory-retrieval-and-tooling-design.md
scripts/: inspect_wheel.py  smoke_stdio.py
server_memory/: __init__.py  __main__.py
src/server_memory/: __init__.py  __main__.py  compression.py  config.py  db.py  embeddings.py  graph.py  local_auth.py  models.py  paths.py  serve.py  server.py  stdio_proxy.py
tests/: conftest.py  memory_context_benchmarks.py  test_benchmark.py  test_benchmark_runner.py  test_compression.py  test_config.py  test_db.py  test_embeddings.py  test_graph.py  test_hybrid_search.py  test_local_auth.py  test_memory_context_benchmarks.py  test_paths.py  test_review_fixes.py  test_search.py  test_stdio_proxy.py  test_tools.py
