[project]
name = "server-memory"
version = "1.0.0"
description = "Local-only MCP memory server with SQLite, FTS5 search, tag-based layers, and built-in compression"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "memory", "sqlite", "fts5", "knowledge-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "platformdirs>=4.3.8",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.24.0",
]
dev = [
    "build>=1.2.2",
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "twine>=5.0.0",
]
desktop-proxy = [
    "httpx>=0.27.0",
]
benchmark = [
    "PyYAML>=6.0.0",
]

[project.scripts]
server-memory = "server_memory.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B011", "B905", "E741", "SIM105", "SIM118", "SIM401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
