[project]
name = "server-memory"
version = "1.0.0"
description = "Local-first durable memory for MCP agents with SQLite, FTS5, scoped recall, and compact context"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Maksim Koval" },
]
keywords = ["mcp", "memory", "sqlite", "fts5", "knowledge-graph", "agent-memory", "local-first"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "platformdirs>=4.3.8",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0.0",
    "numpy>=1.24.0",
]
dev = [
    "build>=1.2.2",
    "pip-audit>=2.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/MK-986123/server-memory"
Repository = "https://github.com/MK-986123/server-memory"
Issues = "https://github.com/MK-986123/server-memory/issues"

[project.scripts]
server-memory = "server_memory.__main__:main"
server-memory-serve = "server_memory.serve:main"
server-memory-proxy = "server_memory.stdio_proxy:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B011", "B905", "E741", "SIM105", "SIM118", "SIM401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
